--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,100 +22,102 @@
         <Button
             android:id="@+id/btn7"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="7" />
 
         <Button
-            android:id="@+id/btn8"
+            android:id="@+id/button16"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="8" />
 
         <Button
-            android:id="@+id/btn9"
+            android:id="@+id/button17"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="9" />
 
         <Button
             android:id="@+id/button15"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="/" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="67dp"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn4"
+            android:id="@+id/button13"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="4" />
 
         <Button
-            android:id="@+id/btn5"
+            android:id="@+id/button16"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="5" />
 
         <Button
-            android:id="@+id/btn6"
+            android:id="@+id/button17"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="6" />
 
         <Button
             android:id="@+id/button15"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="*" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="73dp"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn1"
+            android:id="@+id/button13"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="1" />
 
         <Button
-            android:id="@+id/btn2"
+            android:id="@+id/button16"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="2" />
 
         <Button
-            android:id="@+id/btn3"
+            android:id="@+id/button17"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="3" />
 
         <Button
-            android:id="@+id/btn-"
+            android:id="@+id/button15"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="-" />
     </LinearLayout>
@@ -127,32 +129,32 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn0"
+            android:id="@+id/button21"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="0" />
 
         <Button
-            android:id="@+id/btnc"
+            android:id="@+id/button23"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="c" />
 
         <Button
-            android:id="@+id/btn="
+            android:id="@+id/button22"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="=" />
 
         <Button
-            android:id="@+id/btn+"
+            android:id="@+id/button18"
             android:layout_width="wrap_content"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="+" />
     </LinearLayout>
