--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="65dp"
         android:orientation="horizontal">
 
         <Button
@@ -39,7 +39,9 @@
             android:id="@+id/btn9"
             android:layout_width="wrap_content"
             android:layout_height="74dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
+            android:paddingRight="10dp"
             android:text="9" />
 
         <Button
@@ -49,9 +51,10 @@
             android:layout_weight="1"
             android:text="/" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="65dp"
         android:orientation="horizontal">
 
         <Button
@@ -74,6 +77,7 @@
             android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="74dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="6" />
 
@@ -84,9 +88,10 @@
             android:layout_weight="1"
             android:text="*" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="65dp"
         android:orientation="horizontal">
 
         <Button
@@ -109,6 +114,7 @@
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="74dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="3" />
 
@@ -123,7 +129,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="73dp"
+        android:layout_height="65dp"
         android:orientation="horizontal">
 
         <Button
@@ -146,6 +152,7 @@
             android:id="@+id/btn="
             android:layout_width="wrap_content"
             android:layout_height="74dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="=" />
 
